--- a/Fixxo-MVC-App/Fixxo-MVC-App.csproj
+++ b/Fixxo-MVC-App/Fixxo-MVC-App.csproj
@@ -80,6 +80,7 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\dist\jquery.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\dist\jquery.min.map" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\LICENSE.txt" />
+      <_ContentIncludedByDefault Remove="Views\Contacts\Index.cshtml" />
     </ItemGroup>
 
     <ItemGroup>
