--- a/Fixxo-Web-Api/appsettings.json
+++ b/Fixxo-Web-Api/appsettings.json
@@ -11,7 +11,7 @@
   },
   "TokenValidation": {
     "Issuer": "FixxoWebbyApi",
-    "Audience": "AuthoriezUsers",
+    "Audience": "AuthorizedUsers",
     "SecretKey": "3be6546d-21bf-4102-92b1-bb5fccbf2b39"
   }
 }
