--- a/Fixxo-Web-Api/appsettings.json
+++ b/Fixxo-Web-Api/appsettings.json
@@ -13,5 +13,6 @@
     "Issuer": "FixxoWebbyApi",
     "Audience": "AuthorizedUsers",
     "SecretKey": "3be6546d-21bf-4102-92b1-bb5fccbf2b39"
-  }
+  },
+  "ApiKey" : "3be6546d-21bf-4102-92b1"
 }
